// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot Tests PageTitle.stories Default 1`] = `
<div>
  <div
    class="css-1ogcarq-Container exz365g3"
  >
    <div
      class="css-1pr1jy2-PageHeader exz365g1"
    >
      <span
        class="css-1up2o4-TitleWrapper exz365g0"
      >
        <h2
          class="leafygreen-ui-oaqrgz"
        >
          <span
            data-cy="page-title"
          >
            Test Page
          </span>
          <div
            class="css-2i76u1-BadgeWrapper exz365g2"
          >
            <div
              class="leafygreen-ui-ohl2hc"
            >
              Some Badge
            </div>
          </div>
        </h2>
      </span>
    </div>
  </div>
</div>
`;

exports[`Snapshot Tests PageTitle.stories WithBadge 1`] = `
<div>
  <div
    class="css-1mjm61p-Container exz365g3"
  >
    <div
      class="css-z0zdsn-PageHeader exz365g1"
    >
      <span
        class="css-6bgihq-TitleWrapper exz365g0"
      >
        <h6
          class="leafygreen-ui-19p3n10"
        >
          <span
            data-cy="page-title"
          >
            Test Page
          </span>
          <div
            class="css-yrksc4-BadgeWrapper exz365g2"
          >
            <div
              class="leafygreen-ui-ohl2hc"
            >
              Some Badge
            </div>
          </div>
        </h6>
      </span>
    </div>
  </div>
</div>
`;

exports[`Snapshot Tests PageTitle.stories WithSubtitle 1`] = `
<div>
  <div
    class="css-1mjm61p-Container exz365g3"
  >
    <div
      class="css-z0zdsn-PageHeader exz365g1"
    >
      <span
        class="css-6bgihq-TitleWrapper exz365g0"
      >
        <h6
          class="leafygreen-ui-19p3n10"
        >
          <span
            data-cy="page-title"
          >
            Test Page
          </span>
          <div
            class="css-yrksc4-BadgeWrapper exz365g2"
          />
        </h6>
      </span>
    </div>
    Some subtitle
  </div>
</div>
`;
